--- a/TestCases/report.html
+++ b/TestCases/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,1423],[],[[4,0,0,[],[1,527,894],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,1196],[],[[4,0,0,[],[1,511,684],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TC 004 DeleteRequest","*C:\\Users\\P0107074\\PycharmProjects\\robotFrameWorkPracticeBeginner\\TestCases\\TC_004_DeleteRequest.robot","*TC_004_DeleteRequest.robot","*TC_004 Validate Delete Request"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TC 006 PostRequest ValidateResponse","*C:\\Users\\P0107074\\PycharmProjects\\robotFrameWorkPracticeBeginner\\TestCases\\TC_006_PostRequest_ValidateResponse.robot","*TC_006_PostRequest_ValidateResponse.robot","*TC_006 Create new user"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:01","fail":0,"id":"s1","label":"TC 004 DeleteRequest","name":"TC 004 DeleteRequest","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:01","fail":0,"id":"s1","label":"TC 006 PostRequest ValidateResponse","name":"TC 006 PostRequest ValidateResponse","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1668504955003;
+window.output["baseMillis"] = 1668507862508;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 1442;
+window.output["generated"] = 1206;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
