--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,1196],[],[[4,0,0,[],[1,511,684],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,4709],[],[[4,0,0,[],[1,814,1147],[]],[5,0,0,[],[1,1963,1402],[]],[6,0,0,[],[1,3367,1339],[]]],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TC 006 PostRequest ValidateResponse","*C:\\Users\\P0107074\\PycharmProjects\\robotFrameWorkPracticeBeginner\\TestCases\\TC_006_PostRequest_ValidateResponse.robot","*TC_006_PostRequest_ValidateResponse.robot","*TC_006 Create new user"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Simple Books Api","*C:\\Users\\P0107074\\PycharmProjects\\robotFrameWorkPracticeBeginner\\TestCases\\simple_books_api.robot","*TestCases/simple_books_api.robot","*Status 200 and should be OK","*Register","*Order Book"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:01","fail":0,"id":"s1","label":"TC 006 PostRequest ValidateResponse","name":"TC 006 PostRequest ValidateResponse","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Simple Books Api","name":"Simple Books Api","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1668507862508;
+window.output["baseMillis"] = 1668627977752;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 1206;
+window.output["generated"] = 4759;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
